# dynamism

./: .gitignore  Cargo.toml  test_async  test_async.rs  test_async2  test_async2.rs  test_async3  test_async3.rs
dynamism/: Cargo.toml
dynamism/src/: embed.rs  reqwest.rs  scraper.rs  websearch.rs
dynamism/src/db/: mod.rs
dynamism/src/db/worker/: mod.rs
dynamism/src/segmentation/: mod.rs
dynamism/src/segmentation/worker/: mod.rs
dynamism/src/telemetry/: mod.rs
dynamism/src/umap/: mod.rs
dynamism/tests/: integration.rs
frontend/: Cargo.toml
frontend/src/: app.rs  db.rs  main.rs
frontend/src/data/: mod.rs
frontend/src/model/: mod.rs
frontend/src/test/: mod.rs
src/: db.rs  embed.rs  lib.rs  main.rs  reqwest.rs  scraper.rs  segmenter.rs  websearch.rs
src/db/: mod.rs  test.rs
src/db/worker/: mod.rs
src/segmentation/: mod.rs  model.rs
src/segmentation/worker/: mod.rs  model.rs
src/telemetry/: mod.rs
src/umap/: mod.rs
tests/: integration.rs
var/folders/3p/brv_57v95td6rd7bmm_wjstw0000gn/T/.tmpq8PFZV/test.lance/_transactions/: 0-89783650-ea7c-452d-8afc-2827bbf584fb.txn  1-9c3b48fd-1c4a-439f-9572-1f57a683b8fe.txn
var/folders/3p/brv_57v95td6rd7bmm_wjstw0000gn/T/.tmpqucwTn/test.lance/_transactions/: 0-9157644a-1165-40e8-b7b8-e41c77029926.txn  1-cb2fcc15-e0d0-4b54-94e1-7e318b0fc1f4.txn
