[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
fastembed = "5.12.1"
icu = "2.1.1"
icu_segmenter = "2.1.2"
indicatif = "0.18.4"
itertools = "0.14.0"
lancedb = "0.26.2"
ort = "2.0.0-rc.11"
readability-rust = "0.1.0"
reqwest = "0.13.2"
scraper = "0.25.0"
serde = "1.0.228"
tempfile = "3.27.0"
tokio = "1.50.0"
uuid = "1.22.0"
websearch = "0.1.1"
