[package]
name = "dynamism"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
burn = "0.20.1"
candle-core = {version = "0.10.2",features = ["accelerate"]}
crossbeam-channel = "0.5.15"
fast-umap = "1.2.3"
fastembed = {version = "5.17.2", features = ["nomic-v2-moe"]}
futures = "0.3.32"
icu = "2.1.1"
icu_segmenter = "2.1.2"
indicatif = "0.18.4"
itertools = "0.14.0"
lancedb = "0.30.0"
ort = "2.0.0-rc.11"
readability-rust = "0.1.0"
reqwest = "0.13.2"
sanitize_html = "0.10.0"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["rc"] }
tempfile = "3.27.0"
tokio = "1.50.0"
uuid = "1.22.0"
websearch = "0.1.1"
